# labelU-ML

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main_cicd_pipeline.yml
labelu_ml/: api.py  main.py  model.py
labelu_ml/examples/the_simplest_app/: requirements.txt
labelu_ml/examples/the_simplest_backend/: _wsgi.py  model.py
